<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
android:orientation="vertical"
tools:ignore=""
tools:context=".FindActivity">


    <TextView
        android:id="@+id/txt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:text="FIND US"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="375dp"
        android:layout_height="573dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt12"
        app:layout_constraintVertical_bias="0.478">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fotoAna"
                        android:layout_width="89dp"
                        android:layout_height="82dp"
                        android:layout_marginTop="11dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:srcCompat="@drawable/foto1"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/txtAna"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/desAna" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            </TableRow>

        <Button
            android:id="@+id/btnUno"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonClicked"
            android:text="Ubicación"
            tools:ignore="OnClick" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fotoLuisa"
                        android:layout_width="89dp"
                        android:layout_height="82dp"
                        android:layout_marginTop="11dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:srcCompat="@drawable/foto2"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/txtArticDos"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/des2" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>

        <Button
            android:id="@+id/btnDos"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonClicked"
            android:text="Ubicación"
            tools:ignore="OnClick" />


        <androidx.cardview.widget.CardView
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fotoEva"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="11dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/foto4"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/txtThe2"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/des4" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnTres"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonClicked"
            android:text="Ubicación"
            tools:ignore="OnClick" />


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

